[project]
name = "matrix-loading"
version = "0.1.0"
description = "Matrix data analysis program"
authors = [
    {name = "marianlo",email = "marianlo@student.42porto.com"}
]
requires-python = "^3.10"
dependencies = [
    "numpy (>=2.4.4,<3.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "requests (>=2.33.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
